Ticket #15024 (closed defect: fixed)

Opened 5 months ago

Last modified 4 months ago

[patch] fixed wrong spelled words in utils/screenshotgen/src/

Reported by: ettl.martin Owned by:
Priority: normal Milestone:
Component: GUI-all Version: 2.9-svn
Keywords: Cc:
Blocked By: Patch: yes
Blocking:

Description

Please refer the attached patch. It fixes wrong spelled words in comments.

Best regards and many thanks

Martin Ettl

Attachments

spell_fix.patch download (1.7 KB) - added by ettl.martin 5 months ago.
proposed patch

Change History

Changed 5 months ago by ettl.martin

proposed patch

Changed 4 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [73465]) Fix spelling in utils/screenshotgen sources.

No real changes.

Closes #15024.

Note: See TracTickets for help on using tickets.