Fix spelling in utils/screenshotgen sources.

No real changes.

Closes #15024.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73465 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775